# fc

./: CMakeLists.txt  README.md
include/AST/: ASTContext.h  ASTContextImpl.h  ASTPass.h  Declaration.h  Expressions.h  ParseTreeBuilder.h  ParserTreeCommon.h  ProgramUnit.h  Statements.h  Stmt.h  StmtOpenMP.h  StmtVisitor.h  SymbolTable.h  SymbolTableCommon.h  Type.h  statements.def
include/FCToLLVM/: FCRuntimeHelper.h  FCToLLVMLowering.h
include/codegen/: CGASTHelper.h  CodeGen.h
include/common/: Debug.h  Diagnostics.h  Source.h  Util.h  messages.def
include/dialect/: CMakeLists.txt
include/dialect/FC/: ComplexOperations.td  FCLoopOperations.td  FCOps.h  FCOps.td
include/dialect/FCOps/: CMakeLists.txt  FCLoopOperations.td  FCOps.h  FCOps.td  FCProgramUnit.td
include/dialect/OpenMP/: OpenMPOps.h  OpenMPOps.td
include/dialect/OpenMPOps/: OpenMPOps.h  OpenMPOps.td
include/lex/: Lexer.h  Token.h  TokenKinds.def  TokenKinds.h
include/parse/: Parser.h  ParserUtils.h
include/sema/: ExpansionUtils.h  Intrinsics.def  Intrinsics.h  ModFileHandler.h  Sema.h
include/transforms/: AliasAnalysis.h  FCDoConverter.h  FCMLIRPass.h  ForOpConverter.h  IteratedDominanceFrontier.h
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTPass.cpp  ParseTree.cpp  ParseTreeBuilder.cpp  ParseTreeDumper.cpp  SymbolTable.cpp  Type.cpp
lib/FCToLLVM/: CMakeLists.txt  ComplexOpLowering.cpp  FCFuncOpLowering.cpp  FCRuntimeHelper.cpp  FCToLLVMLowering.cpp  FCTypeConverter.cpp
lib/codegen/: CGASTHelper.cpp  CGExpr.cpp  CGOpenMP.cpp  CGStmt.cpp  CMakeLists.txt  CodeGen.cpp
lib/common/: Debug.cpp  Diagnostics.cpp
lib/dialect/: CMakeLists.txt
lib/dialect/FC/: CMakeLists.txt  DialectRegistration.cpp  FCOps.cpp
lib/dialect/FCOps/: DialectRegistration.cpp  FCOps.cpp
lib/dialect/OpenMP/: CMakeLists.txt  DialectRegistration.cpp  OpenMPOps.cpp
lib/dialect/OpenMPOps/: DialectRegistration.cpp  OpenMPOps.cpp
lib/lex/: Lexer.cpp  TokenKinds.cpp
lib/parse/: CMakeLists.txt  ParseCommon.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseOpenMP.cpp  ParseStmt.cpp  Parser.cpp  ParserUtils.cpp
lib/sema/: ArrBoundsIntrinExpanderPass.cpp  ArraySectionExpander.cpp  ArraySectionReplacer.cpp  BinaryOpHandler.cpp  CMakeLists.txt  ConstPropPass.cpp  ConstructExpander.cpp  DeclEliminatorPass.cpp  ExpansionUtils.cpp  ExprTypeUpdaterPass.cpp  FormatHandler.cpp  FunctionTypeUpdaterPass.cpp  Intrinsics.cpp  IntrinsicsExpanderPass.cpp  ModFileDumperPass.cpp  ModFileHandler.cpp  OpenMPSymbolInfer.cpp  ParameterConstPropPass.cpp  PartRefSymResolverPass.cpp  Sema.cpp  StmtTypeUpdaterPass.cpp  SymbolResolverPass.cpp  TypeUpdaterPass.cpp  UndeclaredErrorPrinter.cpp  UseStmtHandlerPass.cpp
lib/transforms/: AliasAnalysis.cpp  ArrayOpsLowering.cpp  CMakeLists.txt  FCDoConverter.cpp  ForOpConverter.cpp  IteratedDominanceFrontier.cpp  LoopStructuresToStdLowering.cpp  LowerProgramUnit.cpp  MemToReg.cpp  NestedPUVariableLowering.cpp  OpenMPLowering.cpp  SimplifyCFG.cpp  SimplifyLoopMemOps.cpp
runtime/: CMakeLists.txt  fc_runtime.c  fc_runtime.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  openmp_test.sh
test/ast/: array_const_expr.f90  array_const_expr2.f90  array_implied_do1.f90  array_sec_complex1.f90  array_sec_operations1.f90  array_section1.f90  array_section2.f90  array_section3.f90  ast.allocate1.f90  ast.allocate2.f90  ast.arr_assign1.f90  ast.arr_assign2.f90  ast.arr_assign3.f90  ast.assignment1.f90  ast.assignment2.f90  ast.assignment3.f90  ast.assignment4.f90  ast.basic_module.f90  ast.close1.f90  ast.close2.f90  ast.comment1.f90  ast.deallocate1.f90  ast.derived_type1.f90  ast.else_if_stmt1.f90  ast.fileio1.f90  ast.fileio2.f90  ast.fileio3.f90  ast.fileio4.f90  ast.hello.f90  ast.hello2.f90  ast.hello3.f90  ast.if_else_stmt1.f90  ast.if_stmt1.f90  ast.if_stmt2.f90  ast.if_stmt3.f90  ast.logic_expr1.f90  ast.logic_expr2.f90  ast.module2.f90  ast.nullify1.f90  ast.open1.f90  (+104 more)
test/codegen/: complex_bin_ops.f90  print_cg_test1.f90
test/expected_ast/: do1.ast.c
test/mlir_out_tests/: abs1.f90  array1.f90  array2.f90  array_dyn1.f90  array_dyn2.f90  array_multidim1.f90  array_multidim2.f90  array_multidim3.f90  array_multidim4.f90  cast1.f90  complex_control1.f90  const_arg.f90  do_float1.f90  do_if1.f90  do_nest.f90  function1.f90  if_else1.f90  if_else2.f90  implied_do_update1.f90  intrinsic_int.f90  lf_negative.f90  lf_positive.f90  loop_exit_outer1.f90  matmul.f90  max1.f90  nest_elseif1.f90  nest_elseif2.f90  nested_sub.f90  nested_sub_frame.f90  open1.f90  pow1.f90  print1.f90  print2.f90  print3.f90  sqrt1.f90
test/openmp/: ast.master.f90  ast.ompdo1.f90  ast.parallel_do.f90  ast.single1.f90  ast.single2.f90  datamap.f90  hmm.f90  ir.nested_out.f90  ir.parallel_do.f90  master.f90  ompdo1.f90  out.master.f90  out.matmul.f90  out.nested_do.f90  out.ompdo1.f90  out.parallel_do.f90  out.single1.f90  out.single2.f90  parallel_basic_test1.f90  simple.f90  single1.f90  single2.f90
test/output/allocatable/: allocate.f90  allocate1.f90  allocate2.f90  allocate_in1.f90  allocate_out2.f90  deallocate1.f90  deallocate_stat.f90
test/output/arrays/: 2d_array_sum.f90  arr_assign1.f90  arr_assign2.f90  arr_assign3.f90  arr_bounds_intrin_expand.f90  arr_con_handling1.f90  array1.f90  array2.f90  array_con_init1.f90  array_constructor_assign1.f90  array_constructor_init1.f90  array_dyn1.f90  array_dyn2.f90  array_multidim1.f90  array_multidim2.f90  array_multidim3.f90  array_multidim4.f90  array_sec_assign1.f90  array_sec_expressions1.f90  array_sec_expressions2.f90  array_sec_expressions3.f90  array_sec_funcref1.f90  array_sec_funcref2.f90  array_sec_to_element1.f90  array_spec_expr1.f90  assume_arr1.f90  assume_arr2.f90  assume_arr_print1.f90  assume_sz_arr1.f90  complex_arr_sec_assign.f90  do_2d_arr_sum.f90  dyn_arr_nested_routine1.f90  entity_arr_con_init1.f90  f77_dyn_arr1.f  f77_dyn_arr_malloc1.f  func_array_ret.f90  mult_array_spec.f90  print_arr_all.f90  read_char_array.f90  str_arr_contr1.f90  (+2 more)
test/output_tests/: intrin_cos_sin_log.f90
tools/fc/: CMakeLists.txt  fc.cpp
(+238 files in other folders)
